Fixed some more save loading